fix: vertical overflow issue

--- a/public/style.css
+++ b/public/style.css
@@ -10,3 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+main {
+  overflow-y: auto;
+}
